# sicxe

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  main_asm.cc  main_fpga.cc  main_ld.cc  main_sim.cc  main_vm.cc
src/assembler/: CMakeLists.txt  block_table.cc  block_table.h  code.cc  code.h  code_generator.cc  code_generator.h  directive.cc  directive.h  expression_util.cc  expression_util.h  literal_table.cc  literal_table.h  log_file_writer.cc  log_file_writer.h  node.cc  node.h  node_visitor.h  object_file_writer.cc  object_file_writer.h  parser.cc  parser.h  symbol_table.cc  symbol_table.h  table_builder.cc  table_builder.h  token.cc  token.h  tokenizer.cc  tokenizer.h
src/common/: CMakeLists.txt  command_interface.cc  command_interface.h  cpu_state.cc  cpu_state.h  error_db.cc  error_db.h  error_formatter.cc  error_formatter.h  flags_parser.cc  flags_parser.h  float_util.cc  float_util.h  format.h  format_util.cc  format_util.h  instruction.cc  instruction.h  instruction_db.cc  instruction_db.h  instruction_db_default.cc  instruction_instance.h  macros.h  object_file.cc  object_file.h  opcode.h  prefix_tree.cc  prefix_tree.h  text_file.cc  text_file.h  types.h
src/fpga/: CMakeLists.txt  connection.cc  connection.h  loader.cc  loader.h  utility.cc  utility.h
src/linker/: CMakeLists.txt  linker.cc  linker.h  relocation_table.cc  relocation_table.h  symbol_table.cc  symbol_table.h
src/machine/: CMakeLists.txt  device.cc  device.h  execute_result.h  file_device.cc  file_device.h  io_device.cc  io_device.h  loader.cc  loader.h  logic.cc  logic.h  logic_db.cc  logic_db.h  logic_db_default.cc  (+2 more)
tests/: CMakeLists.txt  code_generator_test.cc  command_interface_test.cc  expression_util_test.cc  instruction_db_test.cc  linker_test.cc  parser_test.cc  prefix_tree_test.cc  table_builder_test.cc  test_node_visitor.cc  test_node_visitor.h  test_util.cc  test_util.h  tokenizer_test.cc
(+166 files in other folders)
